--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1081,7 +1081,7 @@ button {
 
 .secondary-section {
     background-size: cover;
-    padding: 2% 0 2% 0;
+    padding: 6% 0 10% 0;
     h1 {
         font-family: "WorkSans Thin", Arial, sans-serif;
         font-size: 43px;
@@ -1178,7 +1178,7 @@ button {
 		content: "";
 		position: absolute;
 		bottom: -1px;
-		left: -50px;
+		left: -35px;
 		height: 2px;
 		width: 100%;
 		background-color: $accent;
@@ -1653,6 +1653,9 @@ aside.third-block-lists-mobile {
     font-size: 42px;
     margin-bottom: 2rem;
     color: $menu;
+	a {
+		color: #32325d;
+	}
 }
 
 .sub-caption-one {
@@ -1667,6 +1670,9 @@ aside.third-block-lists-mobile {
     margin-top: 2rem;
     margin-bottom: 2rem;
     color: $menu;
+	a {
+		color: $menu;
+	}
 }
 
 .sub-caption-two {
@@ -1851,6 +1857,13 @@ aside.third-block-lists-mobile {
 	&:visited {
 		color: $menu;
 	}
+}
+
+
+// PAGE 5 
+
+.all-captions {
+	padding: 5% 0;
 }
 
 @import "media";
