--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -1693,6 +1693,10 @@
 	.secondary-section .sub-descripion+p {
 		padding: 1% 3%;
 	}
+	
+	.third-wrapper-section.fix-m {
+		margin-top: 0;
+	}
 }
 
 
