--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -603,6 +603,14 @@ form {
 
 // FOOTER
 
+.footer-first-part .li-twitter:hover,
+.footer-first-part .li-facebook:hover,
+.footer-first-part .li-google:hover,
+.footer-first-part .li-linkedin:hover {
+	background-position: 1px 8px;
+}
+
+
 .footer-first-part {
     background-color: #f7f9fb;
     padding: 5% 5% 5% 5%;
@@ -618,6 +626,9 @@ form {
         list-style: none;
         padding: 0;
         margin: 0;
+		li {
+			transition: all .3s ease;
+		}
         li a {
             font-size: 17px;
             line-height: 28px;
@@ -1606,7 +1617,7 @@ aside.third-block-lists-mobile {
 }
 
 .fix-m {
-    margin-top: -30px;
+    margin-top: -33px;
 }
 
 .db-fix {
