home fix for footer desrcription

--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -841,9 +841,9 @@
         width: 50%;
     }
     
-	.wrapper-section p:first-child {
-		display: none;
-	}
+//	.wrapper-section p:first-child {
+//		display: none;
+//	}
 	
 	.wrapper-section p.mobile-caption-wr {
 		display: block;
