--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -70,8 +70,12 @@ a {
 /* Main styles */
 
 .overfl-fix {
-	overflow-y: hidden;
+	overflow: hidden;
 } 
+
+.fix-scroll-for-mnu {
+	overflow: hidden;
+}
 
 
 /* HEADER */
@@ -160,28 +164,6 @@ header {
 	transition: all .5s ease;
 }
 
-.fixed-header {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 102%;
-	background-color: #fff;
-	border-bottom: 1px solid rgba(50,50,93,.2);
-	padding: 15px 35px 25px 35px;
-	z-index: 15;
-}
-
-.fixed-header-darknes {
-	position: fixed;
-	top: 0;
-	left: 0;
-	width: 102%;
-	background-color: $menu;
-	border-bottom: 1px solid rgba(#fff,.2);
-	padding: 15px 35px 25px 35px;
-	z-index: 15;
-}
-
 .main-menu-gamburger {
     display: none;
     width: 37px;
@@ -254,6 +236,35 @@ header {
 .main-menu.menu-state-open {
     display: block;
 }
+
+.fixed-header {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 102%;
+	background-color: #fff;
+	border-bottom: 1px solid rgba(50,50,93,.2);
+	padding: 15px 35px 25px 35px;
+	z-index: 15;
+	.logo {
+		margin-top: 2.5rem;
+	}
+	.main-menu-gamburger {
+		top: 52px;
+	}
+}
+
+.fixed-header-darknes {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 102%;
+	background-color: $menu;
+	border-bottom: 1px solid rgba(#fff,.2);
+	padding: 15px 35px 25px 35px;
+	z-index: 15;
+}
+
 
 .header-background {
     background-image: url(../img/bg.png);
@@ -460,7 +471,7 @@ p {
     border: 10px solid $accent;
     padding: 20px;
     width: 100%;
-    height: 50%;
+    height: 45%;
     margin-left: 2rem;
     .first-caption {
         background-image: url(../img/icons/rocket.png);
