--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -325,8 +325,8 @@
     }
     
     .wrapper-section form input {
-        margin-left: 26%;
-        width: 50%;
+        margin-left: 22%;
+        width: 56%;
     }
     
     .wrapper-section form button {
@@ -335,7 +335,7 @@
         left: 50%;
         transform: translate(-50%);
         margin-top: 15px;
-        width: 25%;
+        width: 56%;
     }
     
     .wrapper-section p {
@@ -1243,6 +1243,16 @@
 	.main-menu ul li:after {
 		position: static;
 	}
+	
+	.wrapper-section form input {
+		width: 50%;
+		margin-left: 25%;
+	}
+	
+	.wrapper-section form button {
+		left: 50%;
+		width: 50%;
+	}
 }
 
 // ≥576px
@@ -1376,7 +1386,9 @@
         padding: 20px 40px 66px 40px;
         margin-top: 120px;
         p {
-            font-size: 27px;
+            font-size: 24px;
+			padding-right: 60px;
+			padding-left: 60px;
         }
     }
     
@@ -1769,7 +1781,10 @@
 		font-size: 11px;
 	}
 	
-	
+	.wrapper-section p {
+		padding-left: 30px;
+		padding-right: 30px;
+	}
 }
 
 @media (max-width: 375px) {
