--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -275,7 +275,7 @@ header {
 
 .home-fix-bg {
 	background-position: center top;
-	background-size: 100%;
+	background-size: 100% 100%;
 }
 
 .fix-bgi {
