--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -33,7 +33,8 @@
 	}
 	
 	.first-right-block {
-		height: 40%;
+		height: auto;
+		width: 100%;
 	}
 	
     .top-mnu {
@@ -75,7 +76,8 @@
     }
     
     .second-right-block {
-        height: 58%;
+		width: 100%;
+        height: auto;
     }
     
     .wrapper-section {
